--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,2 @@
-• Es ist immer okay, seine Meinung zu ändern. Deshalb haben wir einen Fehler behoben, der dazu führte, dass sich das Foto-Auswahlmenü öffnete, wenn du einen Anhang in einen Chat eingefügt und dich dann dazu entschlossen hast, diesen doch nicht zu senden.
+• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
+• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
