--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,1 +1,2 @@
-• Vi rettet opp i en feil som førte til at bildevelgeren plutselig dukket opp etter innliming av et vedlegg i en samtale.
+• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
+• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
