--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,2 @@
-• Zdarzyło Ci się kiedyś wkleić załącznik do czatu, po czym zdecydować, że jednak go nie wyślesz? Naprawiliśmy błąd, który powodował, że czasem w takich sytuacjach otwierało się okno wyboru obrazów. Wysłać czy nie wysłać – teraz możesz zmieniać zdanie do woli.
+• In ancient times, quotes were printed on scrolls and nothing would happen if you tapped on the parchment. In modern times, you can tap on a quoted reply and now the original message is highlighted after it scrolls.
+• We also updated the “Note to Self” chat so that it’s always included in the list of available recipients without having to search for your own name. Self-discovery can be hard, but finding yourself in Signal has never been easier.
